moduledir = $(libdir)/lithium/vendor_modules
pkglib_LTLIBRARIES = infortrend.la

infortrend_la_SOURCES = main.c \
						ldrive.c \
						ldrive_item.c \
						ldrive_objfact.c \
						pdrive.c \
						pdrive_item.c \
						pdrive_objfact.c \
						index_refcb.c \
						info.c \
						info_item.c \
						cache.c \
						cache_item.c

infortrend_la_LDFLAGS = -module @MODULE_LDFLAGS@

